---
source: e2e/tests/node_test.rs
expression: res
---
id: 1
is: snm node install 20.0.0


stdout:🎉 Node v20.0.0 is installed
stderr:


id: 2
is: snm node list --compact


stdout:20.0.0
stderr:


id: 3
is: snm node default 20.0.0


stdout:🎉 Node v20.0.0 is now default
stderr:


id: 4
is: snm node list --compact


stdout:-> 20.0.0
stderr:


id: 5
is: node -v


stdout:
stderr:Error: In strict mode, a .node-version file must be configured in the current directory.
